# fastapi_blog

./: .env  main.py  pyproject.toml  requirements.txt
app/blog/: crud.py  models.py  routes.py  schemas.py
app/core/: database.py  parse_dataclasses.py  settings.py
auth/: __init__.py  auth_backend.py  routes.py  schemas.py  user_manager.py  utils.py
blog/: __init__.py
blog/comments/: permissions.py  routes.py  schemas.py  services.py
blog/posts/: permissions.py  routes.py  schemas.py  service.py
config/: config.yaml
core/: settings.py
core/database/: config.py  mixins.py  models.py
migrations/: env.py
migrations/versions/: 236f901503d5_update_user_posts_table.py  98eb7cfd2fd8_first_migrate.py  a3a2825d9884_create_comments_table.py
