[tool.poetry]
name = "fastapi-blog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
pydantic = "^2.0.3"
alembic = "^1.11.1"
fastapi = "^0.100.0"
databases = {extras = ["asyncpg"], version = "^0.7.0"}
uvicorn = "^0.23.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
